# gars-field

./: .all-contributorsrc  .flake8  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.rst  MANIFEST.in  README.rst  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  installation_issues.md
.github/workflows/: release.yaml  tests.yaml
gars_field/: __init__.py  _version.py  edgarsgrid.py  field.py  garsgrid.py  gedgarsgrid.py
test/: test_edgars.py  test_field.py  test_gars.py  test_gedgars.py
