[metadata]
author = gars-field Contributors
author_email = alansnow21@gmail.com
name = gars_field
description = Toolkit to generate Global Area Reference System grids.
keywords = GARS, grid
long_description = file: README.rst
license = BSD License
license_file = LICENSE
platform = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: GIS
url = https://github.com/corteva/gars-field
download_url = http://python.org/pypi/gars-field
project_urls =
    Documentation = https://github.com/corteva/gars-field
    Release Notes = https://github.com/corteva/gars-field/releases
    Bug Tracker = https://github.com/corteva/gars-field/issues
    Source Code = https://github.com/corteva/gars-field

[options]
packages = find:
zip_safe = False # https://mypy.readthedocs.io/en/stable/installed_packages.html
python_requires = >=3.8
install_requires =
    shapely
    pyproj>=3.0.0
tests_require = pytest-cov

[options.packages.find]
include = gars_field*

[options.extras_require]
dev =
    pytest-cov
all =
    %(dev)s

[bdist_wheel]
universal = 1
